<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/input_profile"
      android:gravity="center"
      android:paddingTop="10dp"
      android:textStyle="bold" />

  <EditText
      style="@style/OLED.EditText"
      android:id="@+id/edittext_name"
      android:hint="@string/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="player_name"
      android:inputType="textAutoComplete" />

  <EditText
      style="@style/OLED.EditText"
      android:id="@+id/edittext_uuid"
      android:hint="@string/uuid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="player_uuid"
      android:inputType="textAutoComplete" />

  <Switch
      style="@style/OLED.Switch"
      android:layout_marginEnd="5dp"
      android:checked="true"
      android:id="@+id/switch_remember"
      android:text="@string/remember_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

</LinearLayout>