<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/edittext_name"
      android:hint="@string/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@android:color/darker_gray"
      android:inputType="none" />

  <EditText
      android:id="@+id/edittext_uuid"
      android:hint="@string/uuid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@android:color/darker_gray"
      android:inputType="none" />

  <Switch
      style="@style/OLED.Switch"
      android:layout_marginEnd="5dp"
      android:checked="true"
      android:id="@+id/switch_remember"
      android:text="@string/remember_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

</LinearLayout>